# claude-code-discord-agent

./: .gitignore  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
src/claude_code_discord_agent/: main.py
tests/: test_main.py
