[tool.poetry]
name = "claude-code-discord-agent"
version = "0.1.0"
description = "Discord bot for Claude Code"
authors = ["106- <segmentation-fault@yandex.com>"]
readme = "README.md"
packages = [{include = "claude_code_discord_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.0"
aiohttp = "^3.8.0"
pyyaml = "^6.0"
claude-code-sdk = {git = "https://github.com/106-/claude-code-sdk-python.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
claude-code-discord-agent = "claude_code_discord_agent.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
